:bug: Fix non-interactive area on screen if theme selector was visible before

--- a/src/renderer/editor/toolbar/style/index.scss
+++ b/src/renderer/editor/toolbar/style/index.scss
@@ -345,7 +345,7 @@
 
   &.color-picker-visible {
     .color-picker-container {
-      pointer-events: all;
+      pointer-events: inherit;
       opacity: 1;
       transform: none;
     }
